# vfw_rs

./: Cargo.toml  README.md  build.rs
build_tools/: Cargo.toml
build_tools/src/: lib.rs
hwal/: Cargo.toml  build.rs
hwal/include/: hwal_allocator.h  hwal_ffi.h
hwal/include/hwal_arch/: hwal_riscv.h
hwal/src/: lib.rs
hwal/src/arch/: mod.rs
hwal/src/arch/rv/: crt_non_priv_stack.S  crt_priv_stack.S  hpm.rs  mod.rs  rtapi.rs  trap.S  trap.rs
hwal/src/arch/rv/sbi/: mod.rs
hwal/src/arch/rv/sbi/handlers/: misaligned_access.rs  mod.rs  rdtime.rs  sbi_call.rs
hwal/src/arch/rv/standard/: mod.rs  trap.S  trap.rs
hwal/src/hal/: clint.rs  mod.rs  plic.rs
hwal/src/hal/clk/: clk.rs  clk_div.rs  clk_mux.rs  const_clk.rs  mod.rs  parent_clk.rs  shared_clk.rs
hwal/src/hal/ddr/: common.rs  mod.rs
hwal/src/hal/ddr/sdram/: lpddr4.rs
hwal/src/hal/ddr/umctl2/: common.rs  lpddr4.rs  mod.rs  regs.rs
hwal/src/hal/mailbox/: mailbox.x  mod.rs
hwal/src/hal/uart/: mod.rs  regs.rs  uart.rs
hwal/src/io/: mod.rs
hwal/src/utils/: allocator.rs  bitmap.rs  mod.rs
platform/terminus_cosim/: Cargo.toml  build.rs  build.sh  memory.x  wrapper.h
platform/terminus_cosim/.cargo/: config
platform/terminus_cosim/include/: clint.h  rsrt_bindings.h  trap.h
platform/terminus_cosim/src/: lib.rs
platform/terminus_cosim/terminus_cosim_tests/: Cargo.toml  build.rs  build.sh
rsrt/: Cargo.toml  build.rs  linker.x
rsrt/include/: rsrt_ffi.h
rsrt/src/: arch.rs  heap.rs  hw_thread.rs  ipi.rs  lib.rs  sys.rs
src/: lib.rs
vfw_core/: Cargo.toml  build.rs
vfw_core/include/: vfw_core.h
vfw_core/include/vfw_arch/: vfw_riscv.h
vfw_core/include/vfw_arch/riscv/: vfw_clint.h  vfw_plic.h  vfw_riscv.h
vfw_core/src/: heap.rs  hsm.rs  hw_thread.rs  init.rs  lib.rs  link.x  msg.rs  platform.rs  rt.rs  stack.rs  trap.rs
vfw_core/src/arch/: mod.rs
vfw_core/src/arch/rv/: arch.rs  arch_imps.rs  clint.rs  crt.rs  err_access.rs  hpm.rs  mod.rs  plic.rs  pmp.rs  sys.rs
vfw_core/src/arch/rv/arch/: crt.rs  mod.rs  sys.rs  trap.rs
vfw_core/src/arch/rv/common/: clint.rs  crt_non_priv_stack.S  crt_priv_stack.S  err_access.rs  mod.rs  pmp.rs  sys.rs  trap.S  trap.rs
vfw_core/src/arch/rv/common/sbi/handlers/: misaligned_access.rs  mod.rs  rdtime.rs  sbi_call.rs
vfw_core/src/arch/rv/sbi/: access.rs  hsm.rs  mod.rs  stack.rs
vfw_core/src/arch/rv/sbi/handlers/: boot.rs  interrupt.rs  misaligned_access.rs  mod.rs  rdtime.rs  sbi_call.rs  sbi_trap.rs
vfw_core/src/arch/rv/standard/: mod.rs  trap.rs
vfw_core/src/arch/rv/trap/: exception.rs  interrupt.rs  mod.rs  trap.rs
vfw_core/src/hsm/: mod.rs
vfw_core/src/sys/: arch.rs  ipi.rs  mod.rs  platform.rs  rt.rs
vfw_hal/: Cargo.toml
vfw_hal/include/: vfw_hal.h
vfw_hal/src/: delay.rs  io.rs  lib.rs
vfw_hal/src/clk/: clk.rs  clk_div.rs  clk_mux.rs  const_clk.rs  mod.rs  pll.rs  rst.rs  shared_clk.rs
vfw_hal/src/ddr/: common.rs  mod.rs
vfw_hal/src/ddr/sdram/: lpddr4.rs  mod.rs
vfw_hal/src/ddr/umctl2/: common.rs  lpddr4.rs  mod.rs  regs.rs
vfw_hal/src/uart/: uart.rs
vfw_mailbox/: Cargo.toml  build.rs
vfw_mailbox/include/: vfw_mb.h
vfw_mailbox/src/: lib.rs  link.x
vfw_primitives/: Cargo.toml  build.rs
vfw_primitives/include/: vfw_primitives.h
vfw_primitives/src/: lib.rs  sys.rs
vfw_primitives/src/utils/: allocator.rs
vfw_utils/: Cargo.toml
vfw_utils/include/: vfw_allocator.h
vfw_utils/src/: lib.rs
vfw_utils/src/utils/: allocator.rs  bitmap.rs  mod.rs
