[package]
name = "hwal"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "0.6", features = ["inline-asm"] }
rsrt = { path = "../rsrt"}
mailbox_rs = { git = "https://github.com/shady831213/mailbox_rs" , features = ["no_std", "ptr32"], optional = true}

[features]
default=["mailbox_rs", "full_panic", "max_cores_4"]
full_panic=["rsrt/full_panic"]
mailbox_shared=[]
max_cores_4 = ["rsrt/max_cores_4"]
max_cores_8 = ["rsrt/max_cores_8"]
max_cores_16 = ["rsrt/max_cores_16"]
max_cores_32 = ["rsrt/max_cores_32"]
max_cores_64 = ["rsrt/max_cores_64"]
max_cores_128 = ["rsrt/max_cores_128"]