[package]
name = "rsrt"
version = "0.1.0"
authors = ["yang.li <yang.li@picocom.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
buddy_system_allocator = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }

[features]
full_panic = []
max_cores_4 = []
max_cores_8 = []
max_cores_16 = []
max_cores_32 = []
max_cores_64 = []
max_cores_128 = []