[package]
name = "vfw_core"
version = "0.1.0"
edition = "2021"
links = "vfw_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9"
vfw_primitives = {path = "../vfw_primitives"}
paste = "1"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { version = "0.10" }
rustsbi = "0.3"
fast-trap = { version = "=0.0.1", features = ["riscv-m"] }

[target.'cfg(not(any(target_arch = "riscv32", target_arch = "riscv64")))'.dependencies]
fast-trap = { version = "=0.0.1"}

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}
serde = {version = "1", features = ["derive"]}

[features]
reloc = []
cpu_data_non_priv = []
stack_non_priv = []
max_cores_1 = []
max_cores_2 = []
max_cores_4 = []
max_cores_8 = []
max_cores_16 = []
max_cores_32 = []
max_cores_64 = []
max_cores_128 = []