[package]
name = "vfw_core"
version = "0.1.0"
rust-version = "1.80"
edition = "2021"
links = "vfw_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9"
vfw_primitives = {path = "../vfw_primitives"}
paste =  { version = "1"}

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv.workspace = true
rustsbi = "0.3"
sbi-spec = {version = "0.0.6", features = ["legacy"]}

[build-dependencies]
vfw_build_utils.workspace = true
serde = {version = "1", features = ["derive"]}

[features]
reloc = []
cpu_data_non_priv = []
stack_non_priv = []
max_cores_1 = []
max_cores_2 = []
max_cores_4 = []
max_cores_8 = []
max_cores_16 = []
max_cores_32 = []
max_cores_64 = []
max_cores_128 = []