[package]
name = "vfw_hal"
version = "0.1.0"
edition = "2021"
links = "vfw_hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfw_primitives = {path = "../vfw_primitives"}
spin = { version = "0.9" }
nb = "1.1"
embedded-hal = "1.0"

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}

[features]
alloc = []