[package]
name = "vfw_mailbox"
version = "0.1.0"
edition = "2021"
links = "vfw_mailbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfw_primitives = {path = "../vfw_primitives"}

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { version = "0.10" }

[target.'cfg(target_pointer_width = "32")'.dependencies]
mailbox_rs = { git = "https://github.com/shady831213/mailbox_rs", features = ["no_std", "ptr32"]}

[target.'cfg(target_pointer_width = "64")'.dependencies]
mailbox_rs = { git = "https://github.com/shady831213/mailbox_rs", features = ["no_std", "ptr64"]}

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}

[features]
reloc = []
max_chs_1 = []
max_chs_2 = []
max_chs_4 = []
max_chs_8 = []
max_chs_16 = []
max_chs_32 = []
max_chs_64 = []
max_chs_128 = []
cache_line_32 =["mailbox_rs/cache_line_32"]
cache_line_64 =["mailbox_rs/cache_line_64"]
cache_line_128 =["mailbox_rs/cache_line_128"]
cache_line_256 =["mailbox_rs/cache_line_256"]