[package]
name = "vfw_utils"
version = "0.1.0"
edition = "2021"
links = "vfw_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfw_primitives = {path = "../vfw_primitives"}

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}

[features]
alloc = []