[package]
name = "terminus_cosim"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hwal = { path = "../../hwal", features=["mb_multi"]}

[build-dependencies]
build_tools = {path = "../../build_tools"}

[workspace]
members = [
    "terminus_cosim_tests",
]