[package]
name = "terminus_cosim_tests"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

[dependencies]
platform = { path = "..", package = "terminus_cosim"}
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[build-dependencies]
build_tools = {path = "../../../build_tools"}